lib/src/compiler/tests/testdata/errors/80.out
error[E001]: syntax error
 --> line:3:10
  |
3 |   $a = { [0-1] 00 }
  |          ^ expected bytes
  |